[gd_scene load_steps=43 format=2]

[ext_resource path="res://assets/Characters/Enemies/Bosses/GolemSpirit.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemies/Boss/SandSpirit.gd" type="Script" id=2]
[ext_resource path="res://sfx/giant2.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28, 48 )

[sub_resource type="Animation" id=35]
resource_name = "FallRocks"
length = 1.02857
step = 0.0217391
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0869565, 0.173913, 0.26087, 0.347826, 0.434783, 0.521739, 0.608696, 0.695652, 0.782609, 0.869565, 0.956522 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 40, 41, 42, 43, 40, 41, 42, 43 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.978261 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_call_fall_rocks"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 40 ]
}

[sub_resource type="Animation" id=39]
resource_name = "WallRocks"
length = 0.28
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.16 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_call_wall_rocks"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "attack"
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.28, 0.4, 0.52, 0.6, 0.76, 0.88 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.52, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_cm_init_attack"
}, {
"args": [  ],
"method": "_cm_end_attack"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "charge"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=6]
resource_name = "dead"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28 ]
}

[sub_resource type="Animation" id=7]
resource_name = "fire"
length = 1.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.35, 0.5, 0.65, 0.8, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45, 46 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_call_bumrock"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18 ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "FallRocks"

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "WallRocks"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "charge"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "fire"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "idle"

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=2]
states/FallRocks/node = SubResource( 36 )
states/FallRocks/position = Vector2( 888, 148.327 )
states/WallRocks/node = SubResource( 40 )
states/WallRocks/position = Vector2( 901, 224.327 )
states/attack/node = SubResource( 13 )
states/attack/position = Vector2( 305, 237 )
states/charge/node = SubResource( 30 )
states/charge/position = Vector2( 629, 131.327 )
states/dead/node = SubResource( 14 )
states/dead/position = Vector2( 712, 342 )
states/fire/node = SubResource( 15 )
states/fire/position = Vector2( 350, 109 )
states/hurt/node = SubResource( 16 )
states/hurt/position = Vector2( 556, 342 )
states/idle/node = SubResource( 17 )
states/idle/position = Vector2( 618.667, 245.333 )
transitions = [ "idle", "attack", SubResource( 21 ), "attack", "idle", SubResource( 22 ), "idle", "fire", SubResource( 23 ), "fire", "idle", SubResource( 24 ), "idle", "hurt", SubResource( 25 ), "attack", "hurt", SubResource( 26 ), "fire", "hurt", SubResource( 27 ), "hurt", "idle", SubResource( 28 ), "hurt", "dead", SubResource( 29 ), "idle", "charge", SubResource( 31 ), "charge", "idle", SubResource( 32 ), "fire", "charge", SubResource( 34 ), "idle", "FallRocks", SubResource( 37 ), "FallRocks", "idle", SubResource( 38 ), "idle", "WallRocks", SubResource( 41 ), "WallRocks", "idle", SubResource( 42 ) ]
start_node = "idle"
end_node = "dead"
graph_offset = Vector2( 0, 45.3267 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=3]

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 28, 44 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 44, 52 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 55.7917, 52 )

[node name="SandSpirit" type="KinematicBody2D" groups=["Enemies", "SandSpirit"]]
scale = Vector2( 1.2, 1.2 )
collision_layer = 2
collision_mask = 528
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -28, 8 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -24, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 8
vframes = 6
frame = 40

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FallRocks = SubResource( 35 )
anims/RESET = SubResource( 4 )
anims/WallRocks = SubResource( 39 )
anims/attack = SubResource( 5 )
anims/charge = SubResource( 10 )
anims/dead = SubResource( 6 )
anims/fire = SubResource( 7 )
anims/hurt = SubResource( 8 )
anims/idle = SubResource( 9 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 2 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 3 )

[node name="ChargeArea" type="Area2D" parent="." groups=["Enemies", "SandSpirit"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChargeArea"]
position = Vector2( -12, 20 )
shape = SubResource( 33 )

[node name="DeadArea" type="Area2D" parent="." groups=["EnemiesDefense"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadArea"]
position = Vector2( -24, 16 )
shape = SubResource( 11 )

[node name="AttackArea" type="Area2D" parent="." groups=["Enemies"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 56.2083, 12 )
shape = SubResource( 12 )
disabled = true

[node name="SwordHurt01" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0

[node name="SwordHurt02" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -13.434

[node name="RayAttack" type="RayCast2D" parent="."]
position = Vector2( 0, 24 )
enabled = true
cast_to = Vector2( 128, 0 )

[node name="RayFlip" type="RayCast2D" parent="."]
position = Vector2( 0, 32 )
enabled = true
cast_to = Vector2( 80, 0 )
collision_mask = 528

[node name="RayBumpRocks" type="RayCast2D" parent="."]
position = Vector2( 144, 0 )
scale = Vector2( 2, 1 )
enabled = true
cast_to = Vector2( 368, 0 )

[connection signal="area_entered" from="DeadArea" to="." method="_on_DeadArea_area_entered"]
